replaced 'caonbular blob' references and vars with 'cantabular dataset'. Improved query param extraction
